--- a/package.json
+++ b/package.json
@@ -35,22 +35,31 @@
   "devDependencies": {
     "almond": "^0.3.3",
     "aws-sdk": "^2.18.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.4.6",
     "compressible": "^2.0.9",
     "compression": "^1.6.2",
+    "css-loader": "^0.28.4",
     "electron": "^1.6.1",
     "eslint": "^4.0.0",
     "eslint-plugin-html": "^3.0.0",
     "event-stream": "^3.3.4",
     "express": "^4.15.0",
+    "file-loader": "^0.11.2",
     "globby": "^6.1.0",
     "glsl-strip-comments": "^1.0.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-insert": "^0.5.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-tap": "^1.0.1",
     "gulp-zip": "^4.0.0",
+    "html-webpack-plugin": "^2.30.1",
     "jasmine-core": "^2.5.2",
     "jsdoc": "^3.4.3",
     "karma": "^1.3.0",
@@ -68,6 +77,9 @@
     "mkdirp": "^0.5.1",
     "request": "^2.79.0",
     "rimraf": "^2.6.1",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1",
+    "webpack-stream": "^3.2.0",
     "yargs": "^8.0.1"
   },
   "scripts": {
