--- a/package.json
+++ b/package.json
@@ -35,14 +35,23 @@
   "devDependencies": {
     "almond": "^0.3.3",
     "aws-sdk": "^2.18.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.4.6",
+    "clean-webpack-plugin": "^0.1.16",
     "compressible": "^2.0.9",
     "compression": "^1.6.2",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.5",
     "electron": "^1.6.1",
     "eslint": "^4.0.0",
     "eslint-plugin-html": "^3.0.0",
     "event-stream": "^3.3.4",
+    "exports-loader": "^0.6.4",
     "express": "^4.15.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "globby": "^6.1.0",
     "glsl-strip-comments": "^1.0.0",
     "gulp": "^3.9.1",
@@ -51,6 +60,8 @@
     "gulp-replace": "^0.5.4",
     "gulp-tap": "^1.0.1",
     "gulp-zip": "^4.0.0",
+    "img-loader": "^2.0.0",
+    "imports-loader": "^0.7.1",
     "jasmine-core": "^2.5.2",
     "jsdoc": "^3.4.3",
     "karma": "^1.3.0",
@@ -66,8 +77,15 @@
     "karma-spec-reporter": "^0.0.31",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
+    "open": "0.0.5",
     "request": "^2.79.0",
     "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-glsl-loader": "^1.0.1",
+    "webpack-stream": "^4.0.0",
     "yargs": "^8.0.1"
   },
   "scripts": {
